# snip36-prover-web

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README_WEB.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: daily-health.yml
assets/: snip36_wasm_bg.wasm.br  starknet_transaction_prover_wasm_bg.wasm.br
crates/snip36-artifact/: Cargo.toml
crates/snip36-artifact/src/: lib.rs  local_prover.rs
crates/snip36-browser-prover-wasm/: Cargo.toml
crates/snip36-browser-prover-wasm/src/: lib.rs
crates/snip36-cli/src/: main.rs
crates/snip36-cli/src/commands/: e2e.rs  e2e_coinflip.rs  mod.rs
crates/snip36-core/src/: config.rs  lib.rs  signing.rs  types.rs
crates/snip36-pure/: Cargo.toml
crates/snip36-pure/src/: lib.rs  signing.rs  types.rs
crates/snip36-server/: Cargo.toml
crates/snip36-server/src/routes/: browser.rs  coinflip.rs  mod.rs  prove_block.rs
crates/snip36-wasm/: Cargo.toml
crates/snip36-wasm/src/: lib.rs
extractor/: Cargo.toml  README.md
extractor/src/: main.rs
npm/: package-lock.json  package.json
npm/assets/: snip36_wasm_bg.wasm.br
npm/scripts/: sync-wasm-assets.mjs
npm/src/: brotli-wasm-web.d.ts  index.ts  snip36-wasm.d.ts  types.ts  vendor-modules.d.ts  wasm-loader.ts  worker.ts
portable-core/: prove-transaction-json.sh
portable-core/original-path/: NOTES.md
portable-core/starknet_transaction_prover/src/: lib.rs
portable-core/starknet_transaction_prover/src/proving/: virtual_snos_prover.rs
portable-core/starknet_transaction_prover/src/running/: runner.rs
sample-input/: README.md  bootloader_input_template.json  prover_params.json
scripts/: build-wasm.sh  extract-virtual-os.sh  prove-pie.sh  prove.sh  run-virtual-os.sh  setup.sh  test-pipeline.sh
scripts-sdk/: sync-wasm-assets.mjs
src/: assets.d.ts  client.ts  index.ts  snip36-browser-prover-wasm.d.ts  snip36-wasm.d.ts  starknet-transaction-prover-wasm.d.ts  types.ts  vendor-modules.d.ts  wasm-loader.ts  worker.ts
tests/: README.md  convert-proof.py  e2e-test.sh  sign-and-submit.py  submit-proof.sh  wait-for-tx.sh
tests/contracts/: Scarb.toml
tests/contracts/src/: lib.cairo
web/: README.md
web/frontend/: package-lock.json  package.json  vite.config.ts
web/frontend/src/: App.tsx
